# Exam_Grader

./: .env.example  .gitattributes  .gitignore  .protection_config.json  .vercelignore  AI_REDUNDANCY_ANALYSIS.md  BACKEND_API_REFERENCE.md  BATCH_PROCESSING_PROTECTION.md  BEST_PRACTICES.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMMIT_MESSAGE.md  COMPLETE_LLM_TRAINING_TRANSFORMATION.md  CONFIGURATION.md  DATABASE_MODULES_FIX_REPORT.md  DATABASE_OPTIMIZATIONS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOY_INSTRUCTIONS.md  FINAL_COMMIT_MESSAGE.txt  FRONTEND_BACKEND_FIXES_SUMMARY.md  GIT_COMMIT_MESSAGE.md  HANDWRITING_OCR_ONLY_IMPLEMENTATION_REPORT.md  IMPORT_TROUBLESHOOTING.md  IMPROVEMENT_PLAN.md  INSTALLATION_GUIDE.md  ISSUES_RESOLVED_REPORT.md  LICENSE  LLM_TRAINING_IMPLEMENTATION_SUMMARY.md  LOGGING_AND_PERFORMANCE_FIXES_SUMMARY.md  MARKING_GUIDES_PERFORMANCE_FIXES.md  OCR_TROUBLESHOOTING.md  OPTIMIZED_AI_PROCESSING.md  Procfile  README-PROFESSIONAL.md  README.md  RUN_APP_README.md  SECURITY.md  TESTING_AND_REPORTING_ENHANCEMENT_SUMMARY.md  (+165 more)
.github/workflows/: deploy.yml
.kiro/steering/: product.md  structure.md  tech.md
api/: index.py  vercel_config.py
config/: config.py  consistency.json  deployment_development.json  deployment_production.json  performance.json  processing.json  security.json
doc/: data.py  grading.py
docs/: AUTO_RESTORE_PREVENTION_GUIDE.md  COMPREHENSIVE_CLEANUP_COMPLETE.md  INSTANCE_CONFIG_SETUP.md  LLM_EXTRACTION_PIPELINE.md  MAPPING_FIX_GUIDE.md  MIGRATION_GUIDE.md  NON_INTRUSIVE_PROTECTION_GUIDE.md  PAGE_STATUS_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_STRUCTURE.md  RENDER_API_KEY_SETUP.md  RENDER_DEPLOYMENT_FIXES.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_OCR_API_KEY_SETUP.md  TIMEOUT_OPTIMIZATION_GUIDE.md  WEASYPRINT_WINDOWS_SETUP.md  api_client_usage.md  api_documentation.md  deployment_guide.md  llm-training-improvements.md  websocket_client_guide.md
instance/: exam_grader.db
migrations/: add_comprehensive_settings.py  add_content_hash_to_marking_guides.py  add_document_type_field.py  add_error_tracking_models.py  add_llm_base_url_column.py  add_llm_testing_enhancements.py  add_llm_training_tables.py  add_missing_user_settings_fields.py  add_training_models.py
migrations/versions/: add_progress_tracking_tables.py
results/: CamScanner_04-18-2025_11.34.pdf.json
scripts/: cleanup.py  deploy_llm_improvements.py  init_optimized_database.py  migrate_to_optimized_schema.py  optimize_database.py  rollback_deployment.py  validate_database.py
scripts/utilities/: check_users.py  reset_admin_password.py
src/: __init__.py  constants.py
src/api/: __init__.py  basic_endpoints.py  consolidated_endpoints.py  enhanced_processing_endpoints.py  monitoring_endpoints.py  refactored_ai_endpoints.py  unified_api.py  unified_router.py  upload_endpoints.py
src/config/: README.md  __init__.py  config_manager.py  config_utils.py  database_url_fix.py  demo_config.py  dynamic_config.py  logging_config.py  processing_config.py  unified_config.py
src/database/: __init__.py  demo_optimizations.py  migrations.py  models.py  optimization_utils.py  optimized_models.py  performance_indexes.py  progress_models.py  redis.py  schema_migrations.py  sqlite_optimizations.py  utils.py
src/exceptions/: README.md  __init__.py  application_errors.py  enhanced_error_handler.py  error_mapper.py  error_tracker.py  flask_error_integration.py
src/grading/: answer_matcher.py
src/logging/: __init__.py  comprehensive_logger.py  config.py  flask_integration.py  log_aggregator.py  structured_logger.py
src/middleware/: performance_middleware.py  timeout_middleware.py
src/models/: __init__.py  api_responses.py  document_models.py  validation.py
src/parsing/: __init__.py  parse_guide.py  parse_submission.py  pdf_helper.py
src/performance/: optimization_manager.py  query_cache.py
src/security/: auth_system.py  enhanced_input_validator.py  flask_session_interface.py  secrets_manager.py  secure_file_service.py  security_config.py  security_middleware.py  security_utils.py  session_manager.py
src/services/: __init__.py  analytics_service.py  app_config_service.py  background_tasks.py  base_service.py  batch_processing_service.py  cache_invalidation.py  cache_manager.py  cache_service.py  cache_warming.py  comprehensive_reporting_service.py  confidence_monitor.py  consolidated_grading_service.py  consolidated_llm_service.py  (+97 more)
templates/: base-professional.html  base.html  dashboard-professional.html  dashboard.html  error.html  results.html  settings.html  upload-professional.html  upload.html
tests/: __init__.py  conftest.py  manual_qa_checklist.md  run_all_tests.py  run_comprehensive_tests.py  test_answer_comparison.py  test_enhanced_file_processing.py  test_error_handling_system.py  test_file_processing_service.py  test_health_check.py  test_integration.py  test_llm_training_basic.py  test_mapping_service.py  test_marking_guide.py  test_marking_guide.txt  test_model_testing_service.py  test_monitoring_system.py  test_multidisciplinary_extraction.py  test_parsing.py  test_performance_monitoring.py  test_question_extraction.py  test_question_extraction_simple.py  test_realtime.py  test_reports.py  test_security.py  test_services.py  test_ui.py  test_upload_demo_route.py  test_upload_submission_demo.py  test_validation_service.py  validate_requirements.py
utils/: __init__.py  async_llm_client.py  cache.py  create_test_image.py  env_loader.py  error_handler.py  file_processor.py  file_protection.py  guide_verification.py  input_sanitizer.py  loading_states.py  logger.py  project_init.py  rate_limiter.py  retry.py  setup.py  startup_validator.py  validator.py  version_lock.py
web/: app.py
webapp/: INSTALL.md  README.md  WEBAPP_SUMMARY.md  __init__.py  app.py  app_factory.py  auth.py  config.py  context_processors.py  error_handlers.py  exam_grader_app.py  forms.py  llm_training_routes.py  optimized_routes.py  refactored_routes.py  requirements.txt  run.py  security.py  security_middleware.py  start.bat  start.sh  test_app.py
(+266 files in other folders)
